...
        modifier = modifier
    ) {
        var agentName by remember { mutableStateOf(state.agentName)}
        TextField(
            value = agentName,
            onValueChange = { agentName = it },
            label = { Text("Agent Name") },
            modifier = Modifier.fillMaxWidth()
        )

        OptionSelector(
            state = rememberOptionSelectorState(state.hosts, state.selectedHost),
            onOptionSelected = onSelectHost,
...

        Spacer(modifier = Modifier.weight(1f))
        Button(
            enabled = agentName.isNotBlank() && state.selectedHost != null && selectedModel != null,
            onClick = { onSubmit(agentName, state.selectedHost!!, selectedModel!!, instructions) }
        ) {
            Text("Submit")
        }
    }
}

