...

/**
 * Provides a standard implementation of the DropdownMenu composable with a button labeled by the
 * current selection.
 *
 * When no options are provided, the button is disabled entirely.
 * When no option is selected, the button is labeled "Select an Option".
 * When an option is selected, the button is labeled by the selected option.
 */
@Composable
fun OptionSelector(
    state: OptionSelectorState,
    modifier: Modifier = Modifier,
...
